# extrude-licenses

./: Cargo.toml  README.md
examples/: result-of-cargo-license.json  result-of-license-checker.json  template-1.csv  template-2.md  template-3.html
src/: main.rs
